--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -6,10 +6,13 @@
 
  <h1> Web Development Bootcamps </h1>
 
+ <%= Rating.overall %>
+
 <table>
   <thead>
     <tr>
       <th>Bootcamp</th>
+      <th>Rating</th>
       <th><strong>Name</strong></th>
       <th>Location</th>
       <th>Focus</th>
@@ -20,8 +23,8 @@
   <tbody>
     <% @schools.each do |school| %>
       <tr>
-        <td><img width='50' height='50' src= <%= school.picture_url %></></td>
-        <td><div class="rateit"></div></td>
+        <td><div style = "text-align: center"><img width='50' height='50' src= <%= school.picture_url %>/></div></td>
+        <td><div class="rateit" data-rateit-value='<%= rand(1..5) %>' data-rateit-ispreset="true" data-rateit-readonly="true"></div></td>
         <td><%= school.name %></td>
         <td><%= school.location %></td>
         <td><%= school.focus %></td>
