--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,1 +1,41 @@
+
+
+<script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+
 <h1> <%= @school.name %> </h1>
+<div><img src=<%= @school.picture_url %> /> </div>
+<div class="rateit" id="rating"></div>
+
+
+
+
+
+
+
+
+<script> $("#rating").on("click", function(){
+
+$("#rating").bind('rated', function() {
+
+var el = $(this);
+el.rateit('readonly', true);
+var postid = <%= params[:id] %>;
+var value = el.rateit('value');
+$("#hidden").val(value)
+
+console.log(value);
+console.log(postid);
+console.log(<% @school.id %>);
+
+ $.ajax({
+ 	type: "post",
+ 	url: "/ratings",
+ 	dataType: "text",
+ 	data: { id: postid, overall: value }
+ })
+	});
+
+});
+
+
+</script>
