--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -5,5 +5,7 @@
   <li><%= link_to 'Sign up', new_user_registration_path %></li>
 <% end %>
 <% if user_signed_in? %>
-
+  <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+  <% else %>
+  <li><%= link_to 'Log in', new_user_session_path %></li>
 <% end %>
